--- a/ClienteApp/src/index.html
+++ b/ClienteApp/src/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ClienteApp</title>
+  <title>Agenda De Compromissos</title>
   <base href="/">
+
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+<body class="hold-transition skin-red layout-top-nav">
+
+  <app-root>Loading...</app-root>
 </body>
 </html>
